[package]
name = "naga-cli"
version = "0.4.0"
authors = ["Naga Developers"]
edition = "2018"
description = "Shader translation command line tool"
homepage = "https://github.com/gfx-rs/naga"
repository = "https://github.com/gfx-rs/naga"
keywords = ["shader", "SPIR-V", "GLSL", "MSL"]
license = "MIT OR Apache-2.0"

[features]
dot-out = ["naga/dot-out"]
glsl-in = ["naga/glsl-in"]
glsl-out = ["naga/glsl-out"]
msl-out = ["naga/msl-out"]
spv-in = ["naga/spv-in"]
spv-out = ["naga/spv-out"]
wgsl-in = ["naga/wgsl-in"]
wgsl-out = ["naga/wgsl-out"]
hlsl-out = ["naga/hlsl-out"]

[[bin]]
name = "naga"
path = "src/main.rs"

[dependencies]
naga = { path = "../" }
log = "0.4"
codespan-reporting = "0.11"
